// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomePage renders a non-member message 1`] = `
<div
  className="homepage"
>
  <h1>
    The Assessment Network
  </h1>
  <p>
    The Assessment Network (a15k), established by Rice University’s OpenStax initiative, is a community of member organizations working through sustainable business models to pool assessment items and the knowledge accrued about them.
  </p>
  <p>
    You are currently not a part of a network member.  If you think you should be, please contact the appropriate staff at your organization and they can add you to your organization’s member.
  </p>
  <p>
    If your organization is not currently a network member, and you are interested in joining the network, please contact us at 
    <a
      href="mailto:info@a15k.org"
    >
      info@a15k.org
    </a>
    .
  </p>
</div>
`;

exports[`HomePage renders for member users 1`] = `
<div
  className="homepage"
>
  <h1>
    The Assessment Network
  </h1>
  <p>
    The Assessment Network (a15k), established by Rice University’s OpenStax initiative, is a community of member organizations working through sustainable business models to pool assessment items and the knowledge accrued about them.
  </p>
  <p>
    You are a user in the 
    Testing McTest U
     member.  Your member’s power 
    users are 
    Bob and Jane
    . Please contact them with questions about your organization’s membership in the network.
  </p>
  <p>
    You can access network functionality through the menu dropdowns in the upper right.  Have questions about how to use the network?  Take a look at the material on our 
    <a
      href="http://develop.a15k.org"
    >
      developer portal
    </a>
     or contact us at 
    <a
      href="mailto:info@a15k.org"
    >
      info@a15k.org
    </a>
    .
  </p>
</div>
`;

exports[`HomePage renders with single power users listed 1`] = `
<div
  className="homepage"
>
  <h1>
    The Assessment Network
  </h1>
  <p>
    The Assessment Network (a15k), established by Rice University’s OpenStax initiative, is a community of member organizations working through sustainable business models to pool assessment items and the knowledge accrued about them.
  </p>
  <p>
    You are a user in the 
    Testing McTest U
     member.  Your member’s power 
    user is 
    The Only One
    . Please contact them with questions about your organization’s membership in the network.
  </p>
  <p>
    You can access network functionality through the menu dropdowns in the upper right.  Have questions about how to use the network?  Take a look at the material on our 
    <a
      href="http://develop.a15k.org"
    >
      developer portal
    </a>
     or contact us at 
    <a
      href="mailto:info@a15k.org"
    >
      info@a15k.org
    </a>
    .
  </p>
</div>
`;
